grafy i początek dynamików

--- a/zadania_z_zajec/zajecia1105.ipynb
+++ b/zadania_z_zajec/zajecia1105.ipynb
@@ -10,13 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -49,7 +42,7 @@
    "metadata": {},
    "source": [
     "Dany jest graf nieskierowany o krawedziach o danej pojemnosci. Nalezy policzyc maksymalny przeplyw miedzy wierzcholkiem s do t. Dany jest algorytm ktory jest dany dla grafow skierowanych. Co teraz?\n",
-    "# Rozwiazanie: Przerobic graf, tak aby dla kazdej krawedzi a->b powstaly dwie krawedzi b->c i c->a obie o przeplywie capcity(a,b).\n"
+    "# Rozwiazanie: Przerobic graf, tak aby dla kazdej krawedzi a->b powstaly dwie krawedzi b->c i c->a obie o przeplywie capacity(a,b).\n"
    ]
   },
   {
@@ -58,7 +51,7 @@
    "metadata": {},
    "source": [
     "Zadanie z walutami.\n",
-    "# Aby zarobic to po przejsciu cyklu musimy miec iloczyn kursow walut wiekszy od 1. Jesli zamienimy wagi na  "
+    "# Aby zarobic to po przejsciu cyklu musimy miec iloczyn kursow walut wiekszy od 1. Jesli zamienimy wagi na logarytm, można zrobić sume krawędzi"
    ]
   },
   {
